--- a/Test/Test1/makefile
+++ b/Test/Test1/makefile
@@ -1,5 +1,5 @@
-includeDir = "C:/Users/Prayas Meher/AndromedaEngine/"
+includeDir = -I "C:/Users/Prayas Meher/Andromeda/Andromeda/include" -I "C:/Users/Prayas Meher/Andromeda/vendor/spdlog/include"
 libDir = lib/
 
 all:
-	g++ -I $(includeDir) -L $(libDir) -o Sandbox2D Sandbox2D.cpp -lmingw32 -lAndromeda
+	g++ $(includeDir) -L $(libDir) -o Sandbox2D Sandbox2D.cpp -lmingw32 -lAndromeda
